--- a/minil.toml
+++ b/minil.toml
@@ -1,5 +1,5 @@
 name = "App-PerlPackage2PlantUMLClassDiagram"
-# badges = ["travis"]
+badges = ["travis"]
 authority="cpan:HITODE"
 
 module_maker="ModuleBuildTiny"
